--- a/client/src/components/Aside/aside.css
+++ b/client/src/components/Aside/aside.css
@@ -1,12 +1,7 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    min-height: 50vh !important;
-    z-index: 100;
-    padding: 48px 0 0;
+    min-height: 100% !important;
+    padding: 48px 20px 0;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
     max-width: 20vw;
-    align-items: center;
+    list-style-position: inside;
 }
