--- a/client/src/components/Aside/aside.css
+++ b/client/src/components/Aside/aside.css
@@ -5,6 +5,8 @@
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
     max-width: 20vw;
     list-style-position: inside;
+    overflow: auto;
+    height: 80vh;
 }
 
 li {
