adjusted footer to be fixed to bottom and added spacing to profile page parent div to allow for space at bottom with open accordions

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,15 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Jolly+Lodger');
 
-footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-
 #footer {
     font-family: 'Jolly Lodger', cursive;
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
     right: 0;
