--- a/client/src/components/Aside/aside.css
+++ b/client/src/components/Aside/aside.css
@@ -1,12 +1,11 @@
 .sidebar {
     background-color: black;
-    min-height: 100% !important;
-    padding: 48px 20px 0;
+    padding: 48px 20px 0 0;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
     max-width: 20vw;
-    list-style-position: inside;
     overflow: auto;
     height: 80vh;
+    border-right: white solid 2px
 }
 
 li {
