--- a/client/src/pages/Room/room.css
+++ b/client/src/pages/Room/room.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Creepster&family=Freckle+Face&family=Jolly+Lodger&family=Press+Start+2P&family=VT323&display=swap');
 
-.overflow-control {
-    margin-bottom: 6rem;
-}
-
-
-#message {
+.message {
     font-size: 30px;
     font-family: "Creepster", cursive;
 }
