--- a/client/src/components/Aside/aside.css
+++ b/client/src/components/Aside/aside.css
@@ -14,3 +14,15 @@
 li {
     font-size: 20px;
 }
+
+@media screen and (max-width: 800px) {
+    li {
+        font-size: 15px
+    }
+}
+
+@media screen and (max-width: 685px) {
+    .sidebar {
+        display: none;
+    }
+}
