--- a/client/src/pages/Room/room.css
+++ b/client/src/pages/Room/room.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Creepster&family=Freckle+Face&family=Jolly+Lodger&family=Press+Start+2P&family=VT323&display=swap');
 
+.custom-spacing {
+    margin-bottom: 3rem;
+}
+
 .message {
     font-size: 30px;
     font-family: "Creepster", cursive;
@@ -16,3 +20,17 @@
     0% { opacity: 0; }
     100% { opacity: 1; }
   }
+
+@media screen and (max-width: 800px) {
+    .room_message {
+     font-size: 22px;   
+    }
+
+    .custom-spacing {
+        width: 50%
+    }
+
+    .custom-life-spacing {
+        padding-right: 10px;
+    }
+}
