--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -3,7 +3,6 @@
 #footer {
     font-family: 'Jolly Lodger', cursive;
     position: fixed;
-    left: 0;
     bottom: 0;
-    right: 0;
+    z-index: 3;
 }
