death button fix & adventure fonts fixed

--- a/client/src/components/Aside/aside.css
+++ b/client/src/components/Aside/aside.css
@@ -11,8 +11,10 @@
     font-family: 'Creepster', cursive !important; 
 }
 
+
 li {
     font-size: 20px;
+    font-family: 'Creepster', cursive !important;
 }
 
 @media screen and (max-width: 800px) {
